examples-generated/cluster/vpc/v1alpha1/route.yaml
apiVersion: vpc.scaleway.upbound.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/route
  labels:
    testing.upbound.io/example-name: rt01
  name: rt01
spec:
  forProvider:
    description: tf-route-vpn
    destination: 10.0.0.0/24
    nexthopResourceId: ${scaleway_instance_private_nic.pnic01.id}
    tags:
    - tf
    - route
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: vpc01
